Dropped dublicates and created 2 columns

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -1108,9 +1108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/gq/7dg3c7l94qlg58qtq22rkz1w0000gn/T/ipykernel_16326/295726798.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Grouped'] = df.groupby('Order ID')['Product'].transform(lambda x: ','.join(x))\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1133,380 +1145,117 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Order ID</th>\n",
-       "      <th>Product</th>\n",
-       "      <th>Quantity Ordered</th>\n",
-       "      <th>Price Each</th>\n",
-       "      <th>Order Date</th>\n",
-       "      <th>Purchase Address</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>Sales</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Hour</th>\n",
-       "      <th>Minute</th>\n",
+       "      <th>Grouped</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>295681</td>\n",
-       "      <td>Google Phone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>600.00</td>\n",
-       "      <td>2019-12-25 12:37:00</td>\n",
-       "      <td>79 Elm St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>600.00</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>295681</td>\n",
-       "      <td>USB-C Charging Cable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11.95</td>\n",
-       "      <td>2019-12-25 12:37:00</td>\n",
-       "      <td>79 Elm St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11.95</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>295681</td>\n",
-       "      <td>Bose SoundSport Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>2019-12-25 12:37:00</td>\n",
-       "      <td>79 Elm St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>295681</td>\n",
-       "      <td>Wired Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>2019-12-25 12:37:00</td>\n",
-       "      <td>79 Elm St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>37</td>\n",
+       "      <td>Google Phone,USB-C Charging Cable,Bose SoundSp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>295698</td>\n",
-       "      <td>Vareebadd Phone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>400.00</td>\n",
-       "      <td>2019-12-13 14:32:00</td>\n",
-       "      <td>175 1st St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>400.00</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>14</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>295698</td>\n",
-       "      <td>USB-C Charging Cable</td>\n",
-       "      <td>2</td>\n",
-       "      <td>11.95</td>\n",
-       "      <td>2019-12-13 14:32:00</td>\n",
-       "      <td>175 1st St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>23.90</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>14</td>\n",
-       "      <td>32</td>\n",
+       "      <td>Vareebadd Phone,USB-C Charging Cable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>295703</td>\n",
-       "      <td>AA Batteries (4-pack)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>2019-12-17 12:27:00</td>\n",
-       "      <td>502 Jefferson St, Austin, TX 73301</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>Austin (TX)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>295703</td>\n",
-       "      <td>Bose SoundSport Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>2019-12-17 12:27:00</td>\n",
-       "      <td>502 Jefferson St, Austin, TX 73301</td>\n",
-       "      <td>12</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>Austin (TX)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>27</td>\n",
+       "      <td>AA Batteries (4-pack),Bose SoundSport Headphones</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>66</th>\n",
        "      <td>295726</td>\n",
-       "      <td>iPhone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>2019-12-25 14:49:00</td>\n",
-       "      <td>203 Lakeview St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>14</td>\n",
-       "      <td>49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>295726</td>\n",
-       "      <td>Lightning Charging Cable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>2019-12-25 14:49:00</td>\n",
-       "      <td>203 Lakeview St, Boston, MA 02215</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>Boston (MA)</td>\n",
-       "      <td>14</td>\n",
-       "      <td>49</td>\n",
+       "      <td>iPhone,Lightning Charging Cable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>76</th>\n",
        "      <td>295735</td>\n",
-       "      <td>iPhone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>2019-12-22 18:25:00</td>\n",
-       "      <td>374 Lincoln St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>18</td>\n",
-       "      <td>25</td>\n",
+       "      <td>iPhone,Apple Airpods Headphones,Wired Headphones</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>295735</td>\n",
-       "      <td>Apple Airpods Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>150.00</td>\n",
-       "      <td>2019-12-22 18:25:00</td>\n",
-       "      <td>374 Lincoln St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>150.00</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>18</td>\n",
-       "      <td>25</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>295735</td>\n",
-       "      <td>Wired Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>2019-12-22 18:25:00</td>\n",
-       "      <td>374 Lincoln St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>18</td>\n",
-       "      <td>25</td>\n",
+       "      <th>2297</th>\n",
+       "      <td>297847</td>\n",
+       "      <td>iPhone,Lightning Charging Cable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>295737</td>\n",
-       "      <td>iPhone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>2019-12-19 08:51:00</td>\n",
-       "      <td>966 10th St, Atlanta, GA 30301</td>\n",
-       "      <td>12</td>\n",
-       "      <td>700.00</td>\n",
-       "      <td>Atlanta (GA)</td>\n",
-       "      <td>8</td>\n",
-       "      <td>51</td>\n",
+       "      <th>2345</th>\n",
+       "      <td>297894</td>\n",
+       "      <td>USB-C Charging Cable,AA Batteries (4-pack)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>295737</td>\n",
-       "      <td>Lightning Charging Cable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>2019-12-19 08:51:00</td>\n",
-       "      <td>966 10th St, Atlanta, GA 30301</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>Atlanta (GA)</td>\n",
-       "      <td>8</td>\n",
-       "      <td>51</td>\n",
+       "      <th>2347</th>\n",
+       "      <td>297895</td>\n",
+       "      <td>USB-C Charging Cable,27in FHD Monitor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>295753</td>\n",
-       "      <td>34in Ultrawide Monitor</td>\n",
-       "      <td>1</td>\n",
-       "      <td>379.99</td>\n",
-       "      <td>2019-12-25 06:26:00</td>\n",
-       "      <td>365 Washington St, Dallas, TX 75001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>379.99</td>\n",
-       "      <td>Dallas (TX)</td>\n",
-       "      <td>6</td>\n",
-       "      <td>26</td>\n",
+       "      <th>2398</th>\n",
+       "      <td>297945</td>\n",
+       "      <td>Vareebadd Phone,USB-C Charging Cable,Bose Soun...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>295753</td>\n",
-       "      <td>Lightning Charging Cable</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>2019-12-25 06:26:00</td>\n",
-       "      <td>365 Washington St, Dallas, TX 75001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>Dallas (TX)</td>\n",
-       "      <td>6</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>295759</td>\n",
-       "      <td>Bose SoundSport Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>2019-12-25 06:53:00</td>\n",
-       "      <td>15 Pine St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>99.99</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>6</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>105</th>\n",
-       "      <td>295759</td>\n",
-       "      <td>Wired Headphones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>2019-12-25 06:53:00</td>\n",
-       "      <td>15 Pine St, New York City, NY 10001</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11.99</td>\n",
-       "      <td>New York City (NY)</td>\n",
-       "      <td>6</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>295783</td>\n",
-       "      <td>Vareebadd Phone</td>\n",
-       "      <td>1</td>\n",
-       "      <td>400.00</td>\n",
-       "      <td>2019-12-06 12:41:00</td>\n",
-       "      <td>87 5th St, San Francisco, CA 94016</td>\n",
-       "      <td>12</td>\n",
-       "      <td>400.00</td>\n",
-       "      <td>San Francisco (CA)</td>\n",
-       "      <td>12</td>\n",
-       "      <td>41</td>\n",
+       "      <th>2406</th>\n",
+       "      <td>297951</td>\n",
+       "      <td>USB-C Charging Cable,Lightning Charging Cable</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>100 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Order ID                     Product  Quantity Ordered  Price Each  \\\n",
-       "16    295681                Google Phone                 1      600.00   \n",
-       "17    295681        USB-C Charging Cable                 1       11.95   \n",
-       "18    295681  Bose SoundSport Headphones                 1       99.99   \n",
-       "19    295681            Wired Headphones                 1       11.99   \n",
-       "36    295698             Vareebadd Phone                 1      400.00   \n",
-       "37    295698        USB-C Charging Cable                 2       11.95   \n",
-       "42    295703       AA Batteries (4-pack)                 1        3.84   \n",
-       "43    295703  Bose SoundSport Headphones                 1       99.99   \n",
-       "66    295726                      iPhone                 1      700.00   \n",
-       "67    295726    Lightning Charging Cable                 1       14.95   \n",
-       "76    295735                      iPhone                 1      700.00   \n",
-       "77    295735    Apple Airpods Headphones                 1      150.00   \n",
-       "78    295735            Wired Headphones                 1       11.99   \n",
-       "80    295737                      iPhone                 1      700.00   \n",
-       "81    295737    Lightning Charging Cable                 1       14.95   \n",
-       "97    295753      34in Ultrawide Monitor                 1      379.99   \n",
-       "98    295753    Lightning Charging Cable                 1       14.95   \n",
-       "104   295759  Bose SoundSport Headphones                 1       99.99   \n",
-       "105   295759            Wired Headphones                 1       11.99   \n",
-       "129   295783             Vareebadd Phone                 1      400.00   \n",
+       "     Order ID                                            Grouped\n",
+       "16     295681  Google Phone,USB-C Charging Cable,Bose SoundSp...\n",
+       "36     295698               Vareebadd Phone,USB-C Charging Cable\n",
+       "42     295703   AA Batteries (4-pack),Bose SoundSport Headphones\n",
+       "66     295726                    iPhone,Lightning Charging Cable\n",
+       "76     295735   iPhone,Apple Airpods Headphones,Wired Headphones\n",
+       "...       ...                                                ...\n",
+       "2297   297847                    iPhone,Lightning Charging Cable\n",
+       "2345   297894         USB-C Charging Cable,AA Batteries (4-pack)\n",
+       "2347   297895              USB-C Charging Cable,27in FHD Monitor\n",
+       "2398   297945  Vareebadd Phone,USB-C Charging Cable,Bose Soun...\n",
+       "2406   297951      USB-C Charging Cable,Lightning Charging Cable\n",
        "\n",
-       "             Order Date                         Purchase Address  Month  \\\n",
-       "16  2019-12-25 12:37:00              79 Elm St, Boston, MA 02215     12   \n",
-       "17  2019-12-25 12:37:00              79 Elm St, Boston, MA 02215     12   \n",
-       "18  2019-12-25 12:37:00              79 Elm St, Boston, MA 02215     12   \n",
-       "19  2019-12-25 12:37:00              79 Elm St, Boston, MA 02215     12   \n",
-       "36  2019-12-13 14:32:00      175 1st St, New York City, NY 10001     12   \n",
-       "37  2019-12-13 14:32:00      175 1st St, New York City, NY 10001     12   \n",
-       "42  2019-12-17 12:27:00       502 Jefferson St, Austin, TX 73301     12   \n",
-       "43  2019-12-17 12:27:00       502 Jefferson St, Austin, TX 73301     12   \n",
-       "66  2019-12-25 14:49:00        203 Lakeview St, Boston, MA 02215     12   \n",
-       "67  2019-12-25 14:49:00        203 Lakeview St, Boston, MA 02215     12   \n",
-       "76  2019-12-22 18:25:00  374 Lincoln St, New York City, NY 10001     12   \n",
-       "77  2019-12-22 18:25:00  374 Lincoln St, New York City, NY 10001     12   \n",
-       "78  2019-12-22 18:25:00  374 Lincoln St, New York City, NY 10001     12   \n",
-       "80  2019-12-19 08:51:00           966 10th St, Atlanta, GA 30301     12   \n",
-       "81  2019-12-19 08:51:00           966 10th St, Atlanta, GA 30301     12   \n",
-       "97  2019-12-25 06:26:00      365 Washington St, Dallas, TX 75001     12   \n",
-       "98  2019-12-25 06:26:00      365 Washington St, Dallas, TX 75001     12   \n",
-       "104 2019-12-25 06:53:00      15 Pine St, New York City, NY 10001     12   \n",
-       "105 2019-12-25 06:53:00      15 Pine St, New York City, NY 10001     12   \n",
-       "129 2019-12-06 12:41:00       87 5th St, San Francisco, CA 94016     12   \n",
-       "\n",
-       "      Sales                 City  Hour  Minute  \n",
-       "16   600.00          Boston (MA)    12      37  \n",
-       "17    11.95          Boston (MA)    12      37  \n",
-       "18    99.99          Boston (MA)    12      37  \n",
-       "19    11.99          Boston (MA)    12      37  \n",
-       "36   400.00   New York City (NY)    14      32  \n",
-       "37    23.90   New York City (NY)    14      32  \n",
-       "42     3.84          Austin (TX)    12      27  \n",
-       "43    99.99          Austin (TX)    12      27  \n",
-       "66   700.00          Boston (MA)    14      49  \n",
-       "67    14.95          Boston (MA)    14      49  \n",
-       "76   700.00   New York City (NY)    18      25  \n",
-       "77   150.00   New York City (NY)    18      25  \n",
-       "78    11.99   New York City (NY)    18      25  \n",
-       "80   700.00         Atlanta (GA)     8      51  \n",
-       "81    14.95         Atlanta (GA)     8      51  \n",
-       "97   379.99          Dallas (TX)     6      26  \n",
-       "98    14.95          Dallas (TX)     6      26  \n",
-       "104   99.99   New York City (NY)     6      53  \n",
-       "105   11.99   New York City (NY)     6      53  \n",
-       "129  400.00   San Francisco (CA)    12      41  "
+       "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = all_data[all_data['Order ID'].duplicated(keep=False)]\n",
-    "df.head(20)"
+    "df = all_data[all_data['Order ID'].duplicated(keep=False)] #keep=False to keep all the dublicated character\n",
+    "\n",
+    "df['Grouped'] = df.groupby('Order ID')['Product'].transform(lambda x: ','.join(x))\n",
+    "\n",
+    "df = df[['Order ID', 'Grouped']].drop_duplicates()\n",
+    "\n",
+    "df.head(100)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
