Counted pairs of products (intertools,collections)

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -1243,11 +1243,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('iPhone', 'Lightning Charging Cable') 1005\n",
+      "('Google Phone', 'USB-C Charging Cable') 987\n",
+      "('iPhone', 'Wired Headphones') 447\n",
+      "('Google Phone', 'Wired Headphones') 414\n",
+      "('Vareebadd Phone', 'USB-C Charging Cable') 361\n",
+      "('iPhone', 'Apple Airpods Headphones') 360\n",
+      "('Google Phone', 'Bose SoundSport Headphones') 220\n",
+      "('USB-C Charging Cable', 'Wired Headphones') 160\n",
+      "('Vareebadd Phone', 'Wired Headphones') 143\n",
+      "('Lightning Charging Cable', 'Wired Headphones') 92\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "from itertools import combinations\n",
+    "from collections import Counter\n",
+    "\n",
+    "count = Counter()\n",
+    "\n",
+    "for row in df['Grouped']:\n",
+    "    row_list = row.split(',')\n",
+    "    count.update(Counter(combinations(row_list, 2)))\n",
+    "\n",
+    "for key, value in count.most_common(10):\n",
+    "    print(key, value)"
    ]
   },
   {
