Selected only numeric columns to use sum operation

--- a/Sales_Analysis_Jup.ipynb
+++ b/Sales_Analysis_Jup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 263,
    "id": "05234a2a",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 264,
    "id": "a8e4e6de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 265,
    "id": "8bfd2652",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 165,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "4           43 Hill St, Atlanta, GA 30301  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95  "
       ]
      },
-     "execution_count": 170,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "4         Atlanta (GA)  "
       ]
      },
-     "execution_count": 171,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
        " Seattle (WA)        104941  2747755.48  "
       ]
      },
-     "execution_count": 174,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -1275,6 +1275,230 @@
     "\n",
     "for key, value in count.most_common(10):\n",
     "    print(key, value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 5: What products sold the most? Why do you think it sold the most?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Hour</th>\n",
+       "      <th>Minute</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295665</td>\n",
+       "      <td>Macbook Pro Laptop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>2019-12-30 00:01:00</td>\n",
+       "      <td>136 Church St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>295666</td>\n",
+       "      <td>LG Washing Machine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>2019-12-29 07:03:00</td>\n",
+       "      <td>562 2nd St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>295667</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-12 18:21:00</td>\n",
+       "      <td>277 Main St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>New York City (NY)</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>295668</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>2019-12-22 15:13:00</td>\n",
+       "      <td>410 6th St, San Francisco, CA 94016</td>\n",
+       "      <td>12</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>San Francisco (CA)</td>\n",
+       "      <td>15</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>295669</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>2019-12-18 12:38:00</td>\n",
+       "      <td>43 Hill St, Atlanta, GA 30301</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>Atlanta (GA)</td>\n",
+       "      <td>12</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID               Product  Quantity Ordered  Price Each  \\\n",
+       "0   295665    Macbook Pro Laptop                 1     1700.00   \n",
+       "1   295666    LG Washing Machine                 1      600.00   \n",
+       "2   295667  USB-C Charging Cable                 1       11.95   \n",
+       "3   295668      27in FHD Monitor                 1      149.99   \n",
+       "4   295669  USB-C Charging Cable                 1       11.95   \n",
+       "\n",
+       "           Order Date                        Purchase Address  Month    Sales  \\\n",
+       "0 2019-12-30 00:01:00  136 Church St, New York City, NY 10001     12  1700.00   \n",
+       "1 2019-12-29 07:03:00     562 2nd St, New York City, NY 10001     12   600.00   \n",
+       "2 2019-12-12 18:21:00    277 Main St, New York City, NY 10001     12    11.95   \n",
+       "3 2019-12-22 15:13:00     410 6th St, San Francisco, CA 94016     12   149.99   \n",
+       "4 2019-12-18 12:38:00           43 Hill St, Atlanta, GA 30301     12    11.95   \n",
+       "\n",
+       "                  City  Hour  Minute  \n",
+       "0   New York City (NY)     0       1  \n",
+       "1   New York City (NY)     7       3  \n",
+       "2   New York City (NY)    18      21  \n",
+       "3   San Francisco (CA)    15      13  \n",
+       "4         Atlanta (GA)    12      38  "
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            Quantity Ordered  Price Each   Month       Sales  \\\n",
+      "Product                                                                        \n",
+      "20in Monitor                            4129   451068.99   29336   454148.71   \n",
+      "27in 4K Gaming Monitor                  6244  2429637.70   44440  2435097.56   \n",
+      "27in FHD Monitor                        7550  1125974.93   52558  1132424.50   \n",
+      "34in Ultrawide Monitor                  6199  2348718.19   43304  2355558.01   \n",
+      "AA Batteries (4-pack)                  27635    79015.68  145558   106118.40   \n",
+      "AAA Batteries (4-pack)                 31017    61716.59  146370    92740.83   \n",
+      "Apple Airpods Headphones               15661  2332350.00  109477  2349150.00   \n",
+      "Bose SoundSport Headphones             13457  1332366.75   94113  1345565.43   \n",
+      "Flatscreen TV                           4819  1440000.00   34224  1445700.00   \n",
+      "Google Phone                            5532  3315000.00   38305  3319200.00   \n",
+      "LG Dryer                                 646   387600.00    4383   387600.00   \n",
+      "LG Washing Machine                       666   399600.00    4523   399600.00   \n",
+      "Lightning Charging Cable               23217   323787.10  153092   347094.15   \n",
+      "Macbook Pro Laptop                      4728  8030800.00   33548  8037600.00   \n",
+      "ThinkPad Laptop                         4130  4127958.72   28950  4129958.70   \n",
+      "USB-C Charging Cable                   23975   261740.85  154819   286501.25   \n",
+      "Vareebadd Phone                         2068   826000.00   14309   827200.00   \n",
+      "Wired Headphones                       20557   226395.18  133397   246478.43   \n",
+      "iPhone                                  6849  4789400.00   47941  4794300.00   \n",
+      "\n",
+      "                              Hour  Minute  \n",
+      "Product                                     \n",
+      "20in Monitor                 58764  122252  \n",
+      "27in 4K Gaming Monitor       90916  184331  \n",
+      "27in FHD Monitor            107540  219948  \n",
+      "34in Ultrawide Monitor       89076  183480  \n",
+      "AA Batteries (4-pack)       298342  609039  \n",
+      "AAA Batteries (4-pack)      297332  612113  \n",
+      "Apple Airpods Headphones    223304  455570  \n",
+      "Bose SoundSport Headphones  192445  392603  \n",
+      "Flatscreen TV                68815  142789  \n",
+      "Google Phone                 79479  162773  \n",
+      "LG Dryer                      9326   19043  \n",
+      "LG Washing Machine            9785   19462  \n",
+      "Lightning Charging Cable    312529  634442  \n",
+      "Macbook Pro Laptop           68261  137574  \n",
+      "ThinkPad Laptop              59746  121508  \n",
+      "USB-C Charging Cable        314645  647586  \n",
+      "Vareebadd Phone              29472   61835  \n",
+      "Wired Headphones            271720  554023  \n",
+      "iPhone                       98657  201688  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming all_data is your DataFrame\n",
+    "# Select only the numeric columns\n",
+    "numeric_data = all_data.select_dtypes(include=['number'])\n",
+    "\n",
+    "# Include the 'Product' column to group by\n",
+    "numeric_data['Product'] = all_data['Product']\n",
+    "\n",
+    "# Group by 'Product' and sum the numeric columns\n",
+    "product_group = numeric_data.groupby('Product').sum()\n",
+    "\n",
+    "print(product_group)\n"
    ]
   },
   {
